--- a/resources/style.css
+++ b/resources/style.css
@@ -31,6 +31,7 @@ header {
 }
 
 h1 {
+    font-family: "Jacquard 24", system-ui;
     font-size: 32px;
     color: cadetblue;
     letter-spacing: 1px;
