--- a/resources/style.css
+++ b/resources/style.css
@@ -1,6 +1,19 @@
+:root {
+    /* FONTS */
+    --font-jacquard: "Jacquard 24", system-ui;
+    --font-jersey: "Jersey 15", sans-serif;
+
+    /* SIZING */
+    --five-pix: 5px;
+    --eight-pix: 8px;
+
+    /* COLORS */
+    --BLUE: rgb(50, 102, 215);
+}
+
 * {
   margin: 0;
-  padding: 0;  
+  padding: 0;
 }
 
 body {
@@ -19,26 +32,30 @@ header {
     /* THIS IS A COMMENT */
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     border: 2px solid black;
 }
 
 #icon {
     width: 50px;
     height: 50px;
-    border: 4px double silver;
+    border: var(--five-pix) double silver;
     border-radius: 50%;
 }
 
 h1 {
-    font-family: "Jacquard 24", system-ui;
+    font-family: var(--font-jacquard);
     font-size: 32px;
-    color: cadetblue;
+    color: var(--BLUE);
     letter-spacing: 1px;
 }
 .company-desc {
     font-size: 0.5em;
     font-size: 11px;
+}
+
+.user-interface {
+    text-align: right;
 }
 
 
@@ -57,6 +74,7 @@ h1 {
     margin: 0 3px;
     padding: 0 3px;
     color: white;
+    font-family: var();
     text-decoration: none;
     transition: all 1s;
 }
